Tidy up
- Removed unused imports
- Removed unused variables
- Switched some depreciated stuff
- Removed a bunch of Prints
+ other warnings
-